# trustandverify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  backends.md  confidence-algebra.md  getting-started.md
jac/: README.md  jac.toml  trustgraph.jac
src/trustandverify/: __init__.py  jac_interop.py
src/trustandverify/cache/: __init__.py  file_cache.py  protocol.py  redis_cache.py
src/trustandverify/cli/: main.py
src/trustandverify/core/: __init__.py  agent.py  config.py  models.py  pipeline.py
src/trustandverify/export/: __init__.py  html.py  jsonld.py  markdown.py  pdf.py  protocol.py
src/trustandverify/llm/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py  prompts.py  protocol.py
src/trustandverify/scoring/: __init__.py  algebra.py  conflict.py  fusion.py  opinions.py  trust.py
src/trustandverify/search/: __init__.py  bing.py  brave.py  multi.py  protocol.py  serpapi.py  tavily.py
src/trustandverify/storage/: __init__.py  memory.py  mongo.py  neo4j.py  postgres.py  protocol.py  redis.py  sqlite.py
src/trustandverify/ui/: app.py
tests/: conftest.py  test_protocols.py
tests/test_cache/: test_file_cache.py  test_redis_cache.py
tests/test_cli/: test_cli.py
tests/test_core/: test_agent.py  test_pipeline.py  test_quick_wins.py
tests/test_export/: test_exporters.py  test_jsonld.py
tests/test_integration/: test_e2e.py
tests/test_jac/: test_jac_interop.py
tests/test_llm/: test_backends.py  test_implementations.py
tests/test_scoring/: test_algebra.py  test_conflict.py  test_fusion.py  test_opinions.py  test_trust.py
tests/test_search/: test_backends.py  test_coverage.py
tests/test_storage/: test_all_backends.py  test_backends.py
tests/test_ui/: test_ui.py
